--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
                         <h1 class="home__title">Nguyễn Hồng Hoàng Lan</h1>
                         <span class="home__profession">Frontend Developer</span>
-                        <p class="home__description">I am a self-taught Frontend Developer Trainee aiming to gain experience and improve my programming skills by creating projects. I love to learn new skills or techniques that inspire me to create cool things. Well-organized person, problem solver, independent employee with high attention to detail.
+                        <p class="home__description">I am a self-taught Frontend Developer Trainee aiming to gain experience and improve my programming skills by creating projects. I love to learn new skills or techniques that inspire me to create cool things. <br>Well-organized person, problem solver, independent employee with high attention to detail.
                             <br><br>Below you'll find projects I've completed that showcase my skills and general background in web development.
                         </p>
 
@@ -124,8 +124,8 @@
                 <div class="education__container bd-grid">
                     <div class="education__content">
                         <div>
-                            <h3 class="education__year">2013 - 2017</h3>
-                            <span class="education__university">University of Social Sciences and Humanities</span>
+                            <h3 class="education__year">2020 - Present</h3>
+                            <span class="education__university">Personal Projects</span>
                         </div>
 
                         <div class="education__time">
@@ -134,8 +134,25 @@
                         </div>
 
                         <div>
-                            <h3 class="education__race">Japanese Studies</h3>
-                            <span class="education__specialty">Learned advanced Japanese with Japanese cultures & business etiquettes.</span>
+                            <h3 class="education__race">Frontend Developer</h3>
+                            <span class="education__specialty">Create beautiful & responsive website using current technology.</span>
+                        </div>
+                    </div>
+
+                    <div class="education__content">
+                        <div>
+                            <h3 class="education__year">2018 - Present</h3>
+                            <span class="education__university">Robert Bosch Engineering and Business Solutions Vietnam</span>
+                        </div>
+
+                        <div class="education__time">
+                            <span class="education__rounder"></span>
+                            <span class="education__line"></span>
+                        </div>
+
+                        <div>
+                            <h3 class="education__race">Senior Data Security Partner</h3>
+                            <span class="education__specialty">Be the contact point for Information Security and Data Protection (ISP). Responsible for ISP Instruction, awareness and supporting members in department. </span>
                         </div>
                     </div>
 
@@ -158,8 +175,8 @@
 
                     <div class="education__content">
                         <div>
-                            <h3 class="education__year">2018 - 2021</h3>
-                            <span class="education__university">Robert Bosch Engineering and Business Solutions Vietnam</span>
+                            <h3 class="education__year">2013 - 2017</h3>
+                            <span class="education__university">University of Social Sciences and Humanities</span>
                         </div>
 
                         <div class="education__time">
@@ -168,8 +185,8 @@
                         </div>
 
                         <div>
-                            <h3 class="education__race">Senior Data Security Partner</h3>
-                            <span class="education__specialty">Be the contact point for Information Security and Data Protection (ISP). Responsible for ISP Instruction, awareness and supporting members in department. </span>
+                            <h3 class="education__race">Japanese Studies</h3>
+                            <span class="education__specialty">Learned advanced Japanese with Japanese cultures & business etiquettes.</span>
                         </div>
                     </div>
                 </div>
