--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="assets/css/styles.css">
         
 
-        <title>Responsive personal portfolio | Hoàng Lan</title>
+        <title>Hoàng Lan | Personal portfolio</title>
     </head>
     <body>
         <!--===== HEADER =====-->
