--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                                 <a target="_blank" href="https://nhhlan.github.io/github-app/" class="works__link"><i class="bx bx-window-alt"></i> Live site</a>
                                 <a target="_blank" href="https://github.com/nhhlan/github-app" class="works__link"><i class="bx bx-link-alt"></i> Github</a>
                             </div>
-                            <span class="works__title">Job Finder App</span>
+                            <span class="works__title">Job Finder App using API</span>
                         </div>
                     </div>
 
