--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                 <p class="footer__description">I’m always up for adventure and opportunities. Feel free to say hello.</p>
 
                 <div class="footer__social">
-                    <a download="" href="#" class="button home__button">Download CV</a>
+                    <a target="_blank" href="https://drive.google.com/file/d/1R-44rOy5rsjKVVREscUfUOvOgt-sw4uK/view?usp=sharing" class="button home__button">Download CV</a>
                 </div>
 
                 <p class="footer__copy">&#169 Nguyễn Hồng Hoàng Lan. All right reserved - 2021</p>
