--- a/index.html
+++ b/index.html
@@ -92,9 +92,16 @@
                             <img src="assets/img/sass.png" alt="sass" loading="lazy">
                             <h5 class="skills__subtitle">SASS</h5>
                         </div>
+                    </div>
+
+                    <div class="skills__content">
                         <div class="skills__img">
                             <img src="assets/img/github.png" alt="github" loading="lazy">
                             <h5 class="skills__subtitle">Git & Github</h5>
+                        </div>
+                        <div class="skills__img">
+                            <img src="assets/img/nodejs.png" alt="illustrator" loading="lazy">
+                            <h5 class="skills__subtitle">Node JS</h5>
                         </div>
                     </div>
 
